# Wali-turtlebot

./: README.md  UPDATE.md  package.xml  wali.sh
action/: go_directions.py
run_service/: run_client.py  run_listener.py  run_server.py
run_topic/: demo_talker.py  run_listener.py  run_talker.py
srv/: Action_order.srv
utils/: kobuki_battery.py
wali_Detection/detect/: CMakeLists.txt  package.xml
wali_Detection/detect/config/: yolov3-tiny.cfg  yolov3.cfg
wali_Detection/detect/scripts/: kinect_detect.py  models.py  yolov3_detect.py
wali_Detection/detect/scripts/utils/: datasets.py  parse_config.py  utils.py
wali_Detection/detect/weights/: download_weights.sh
wali_Detection/kinect/: package.xml
wali_Detection/kinect/scripts/: kinect_rgbd_client.py  kinect_rgbd_server.py
wali_Detection/model/: CMakeLists.txt  package.xml
wali_Detection/model/src/: kinect_bisenet.cpp  kinect_cx3.cpp  stereo_bisenet.cpp  stereo_cx3.cpp
wali_Detection/stereo/: CMakeLists.txt  package.xml
wali_Detection/stereo/include/stereo/: GetRemapParam.cpp  GetRemapParam.h  GlobelVariable.h  descriptor.cpp  descriptor.h  elas.cpp  elas.h  filter.cpp  filter.h  image.h  matrix.cpp  matrix.h  sse_to_neon.hpp  threadProcess.cpp  threadProcess.h  triangle.cpp  triangle.h
wali_Detection/stereo/param/: param1022.yml  param1022_20.yml  param1022_2_1280_30.yml  param1022_2_1920_30.yml  param1022_2_30.yml  param1022_30.yml  param1022_40.yml
wali_Detection/stereo/src/: stereo_rgbd_client.cpp  stereo_rgbd_puber.cpp  stereo_rgbd_puber_1sendT.cpp  stereo_rgbd_server.cpp  stereo_rgbd_suber.cpp
wali_TX2/: README.md
wali_depth/: CMakeLists.txt  README.md  package.xml  wali.sh
wali_depth/kinect/: rgbd_image_client.py  rgbd_image_server.py
wali_depth/src/: slowdown.py  talker.py
wali_depth/srv/: RGBD_Compressed_Image.srv
wali_v1/kinect/: CMakeLists.txt  package.xml
wali_v1/kinect/scripts/: kinect_rgbd_client.py
wali_v1/kinect/src/: kinect_rgbd_server.py
wali_v1/kinect/srv/: RGBD_Image.srv
wali_v1/model/: CMakeLists.txt  package.xml
wali_v1/model/src/: kinect_bisenet.cpp
wali_v1/stereo/: CMakeLists.txt  package.xml
wali_v1/stereo/msg/: RGBD_Image.msg
wali_v1/stereo/src/: stereo_rgbd_puber.cpp  stereo_rgbd_suber.cpp
